@@ -7,11 +7,16 @@ import org.springframework.stereotype.Component;
 import org.telegram.telegrambots.bots.TelegramLongPollingBot;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.methods.send.SendPhoto;
+import org.telegram.telegrambots.meta.api.methods.updatingmessages.EditMessageMedia;
 import org.telegram.telegrambots.meta.api.methods.updatingmessages.EditMessageText;
 import org.telegram.telegrambots.meta.api.objects.InputFile;
 import org.telegram.telegrambots.meta.api.objects.Update;
+import org.telegram.telegrambots.meta.api.objects.media.InputMediaPhoto;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
+import org.telegram.telegrambots.meta.api.objects.replykeyboard.ReplyKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
+import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.KeyboardButton;
+import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.KeyboardRow;
 import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
 
 import java.util.*;
@@ -30,10 +35,12 @@ public class RestaurantBot extends TelegramLongPollingBot {
     @Autowired
     private MenuApiClient menuApiClient;
 
+    private final Map<Long, String> userSelectedCategory = new HashMap<>();
+    private final Map<Long, List<MenuItemDto>> categoryDishesCache = new HashMap<>();
+    private final Map<Long, Integer> categoryDishIndexes = new HashMap<>();
+    private final Map<Long, Integer> lastMenuMessageIds = new HashMap<>();
     private final Map<Long, Integer> userReviewIndexes = new HashMap<>();
     private final Map<Long, List<ReviewBot>> userReviews = new HashMap<>();
-    private final Map<Long, List<MenuItemDto>> userMenuItems = new HashMap<>();
-    private final Map<Long, Integer> userMenuIndexes = new HashMap<>();
 
     @Override
     public String getBotUsername() {
@@ -51,27 +58,24 @@ public class RestaurantBot extends TelegramLongPollingBot {
             if (update.hasCallbackQuery()) {
                 String callbackData = update.getCallbackQuery().getData();
                 Long chatId = update.getCallbackQuery().getMessage().getChatId();
+                Integer messageId = update.getCallbackQuery().getMessage().getMessageId();
 
-                // Проверяем нажатие на категорию меню
-                if (callbackData.startsWith("menu_")) {
-                    String category = callbackData.substring("menu_".length());
-                    List<MenuItemDto> items = menuApiClient.fetchMenuByCategory(category);
-                    if (!items.isEmpty()) {
-                        userMenuItems.put(chatId, items);
-                        userMenuIndexes.put(chatId, 0);
-                        sendMenuItem(chatId, items.get(0));
+                if (callbackData.startsWith("menuCategory_")) {
+                    String category = callbackData.substring("menuCategory_".length());
+                    List<MenuItemDto> filtered = menuApiClient.fetchMenuByCategory(category);
+                    if (!filtered.isEmpty()) {
+                        userSelectedCategory.put(chatId, category);
+                        categoryDishesCache.put(chatId, filtered);
+                        categoryDishIndexes.put(chatId, 0);
+                        sendMenuItem(chatId, filtered.get(0));
+                    } else {
+                        sendSimpleMessage(chatId, "❌ Нет блюд в категории " + category);
                     }
-                }
-                // Обработка перехода к предыдущему блюду
-                else if (callbackData.equals("menu_prev")) {
-                    changeMenuItem(update, -1);
-                }
-                // Обработка перехода к следующему блюду
-                else if (callbackData.equals("menu_next")) {
-                    changeMenuItem(update, 1);
-                }
-                // Обработка отзывов
-                else if (callbackData.equals("prev")) {
+                } else if (callbackData.equals("menu_prev")) {
+                    updateMenuItem(chatId, -1);
+                } else if (callbackData.equals("menu_next")) {
+                    updateMenuItem(chatId, 1);
+                } else if (callbackData.equals("prev")) {
                     editReview(update, -1);
                 } else if (callbackData.equals("next")) {
                     editReview(update, 1);
@@ -80,101 +84,71 @@ public class RestaurantBot extends TelegramLongPollingBot {
             }
 
             if (update.hasMessage() && update.getMessage().hasText()) {
-                String messageText = update.getMessage().getText();
                 Long chatId = update.getMessage().getChatId();
+                String text = update.getMessage().getText();
 
-                switch (messageText) {
-                    case "/start":
-                        sendMessageWithKeyboard(chatId, "👋 Привет! Я бот ресторана. Выберите, что вас интересует:");
-                        break;
-                    case "О ресторане":
-                        sendRestaurantInfo(chatId);
-                        break;
-                    case "Меню":
-                        sendCategorySelection(chatId);
-                        break;
-                    case "Бронь":
-                        sendSimpleMessage(chatId, "📅 Чтобы забронировать столик, напишите дату и время.");
-                        break;
-                    case "Оставить отзыв":
-                        sendSimpleMessage(chatId, "✍️ Напишите ваш отзыв, и мы обязательно его учтём.");
-                        break;
-                    case "Контакты":
-                        sendSimpleMessage(chatId, "📞 Телефон: +7 (900) 123-45-67\n📍 Адрес: ул. Вкусная, 7");
-                        break;
-                    case "Профиль":
-                        sendSimpleMessage(chatId, "👤 Профиль в разработке. В будущем здесь будут ваши заказы и бонусы.");
-                        break;
-                    default:
-                        sendSimpleMessage(chatId, "❓ Неизвестная команда. Пожалуйста, используйте кнопки ниже.");
+                switch (text) {
+                    case "/start" -> sendMainMenu(chatId);
+                    case "О ресторане" -> sendRestaurantInfo(chatId);
+                    case "Меню" -> sendCategorySelection(chatId);
+                    case "Бронь" -> sendSimpleMessage(chatId, "📅 Чтобы забронировать столик, напишите дату и время.");
+                    case "Оставить отзыв" -> sendSimpleMessage(chatId, "✍️ Напишите ваш отзыв, и мы обязательно его учтём.");
+                    case "Контакты" -> sendSimpleMessage(chatId, "📞 Телефон: +7 (900) 123-45-67\n📍 Адрес: ул. Вкусная, 7");
+                    case "Профиль" -> sendSimpleMessage(chatId, "👤 Профиль в разработке.");
+                    default -> sendSimpleMessage(chatId, "❓ Неизвестная команда.");
                 }
             }
         } catch (Exception e) {
             e.printStackTrace();
         }
     }
+    private void editReview(Update update, int direction) {
+        Long chatId = update.getCallbackQuery().getMessage().getChatId();
+        Integer messageId = update.getCallbackQuery().getMessage().getMessageId();
+        List<ReviewBot> reviews = userReviews.get(chatId);
+        if (reviews == null || reviews.isEmpty()) return;
+        int index = (userReviewIndexes.getOrDefault(chatId, 0) + direction + reviews.size()) % reviews.size();
+        userReviewIndexes.put(chatId, index);
+        ReviewBot review = reviews.get(index);
+        EditMessageText editMessage = new EditMessageText();
+        editMessage.setChatId(chatId.toString());
+        editMessage.setMessageId(messageId);
+        editMessage.setText(formatReviewText(review));
+        editMessage.setParseMode("Markdown");
+        editMessage.setReplyMarkup(getReviewKeyboard());
+        try {
+            execute(editMessage);
+        } catch (org.telegram.telegrambots.meta.exceptions.TelegramApiException e) {
+            e.printStackTrace();
+        }
+    }
+    private void sendMainMenu(Long chatId) {
+        SendMessage message = new SendMessage(chatId.toString(), "👋 Привет! Я бот ресторана. Выберите, что вас интересует:");
 
-    private void sendSimpleMessage(Long chatId, String text) {
-        SendMessage message = new SendMessage(chatId.toString(), text);
+        ReplyKeyboardMarkup keyboard = new ReplyKeyboardMarkup();
+        keyboard.setResizeKeyboard(true);
+        keyboard.setOneTimeKeyboard(false);
+
+        List<KeyboardRow> rows = new ArrayList<>();
+
+        rows.add(new KeyboardRow(List.of(new KeyboardButton("О ресторане"), new KeyboardButton("Меню"))));
+        rows.add(new KeyboardRow(List.of(new KeyboardButton("Бронь"), new KeyboardButton("Оставить отзыв"))));
+        rows.add(new KeyboardRow(List.of(new KeyboardButton("Контакты"), new KeyboardButton("Профиль"))));
+
+        keyboard.setKeyboard(rows);
+        message.setReplyMarkup(keyboard);
+
         try {
             execute(message);
-        } catch (org.telegram.telegrambots.meta.exceptions.TelegramApiException e) {
-            throw new RuntimeException(e);
+        } catch (TelegramApiException e) {
+            e.printStackTrace();
         }
     }
 
-    private void sendMessageWithKeyboard(Long chatId, String text) {
-        SendMessage message = new SendMessage(chatId.toString(), text);
-
-        InlineKeyboardMarkup keyboardMarkup = new InlineKeyboardMarkup();
-        List<List<InlineKeyboardButton>> keyboard = new ArrayList<>();
-
-        InlineKeyboardButton button1 = new InlineKeyboardButton();
-        button1.setText("О ресторане");
-        button1.setCallbackData("О ресторане");
-
-        InlineKeyboardButton button2 = new InlineKeyboardButton();
-        button2.setText("Меню");
-        button2.setCallbackData("Меню");
-
-        List<InlineKeyboardButton> row1 = new ArrayList<>();
-        row1.add(button1);
-        row1.add(button2);
-
-        InlineKeyboardButton button3 = new InlineKeyboardButton();
-        button3.setText("Бронь");
-        button3.setCallbackData("Бронь");
-
-        InlineKeyboardButton button4 = new InlineKeyboardButton();
-        button4.setText("Оставить отзыв");
-        button4.setCallbackData("Оставить отзыв");
-
-        List<InlineKeyboardButton> row2 = new ArrayList<>();
-        row2.add(button3);
-        row2.add(button4);
-
-        InlineKeyboardButton button5 = new InlineKeyboardButton();
-        button5.setText("Контакты");
-        button5.setCallbackData("Контакты");
-
-        InlineKeyboardButton button6 = new InlineKeyboardButton();
-        button6.setText("Профиль");
-        button6.setCallbackData("Профиль");
-
-        List<InlineKeyboardButton> row3 = new ArrayList<>();
-        row3.add(button5);
-        row3.add(button6);
-
-        keyboard.add(row1);
-        keyboard.add(row2);
-        keyboard.add(row3);
-
-        keyboardMarkup.setKeyboard(keyboard);
-        message.setReplyMarkup(keyboardMarkup);
-
+    private void sendSimpleMessage(Long chatId, String text) {
         try {
-            execute(message);
-        } catch ( org.telegram.telegrambots.meta.exceptions.TelegramApiException e) {
+            execute(new SendMessage(chatId.toString(), text));
+        } catch (TelegramApiException e) {
             e.printStackTrace();
         }
     }
@@ -205,28 +179,7 @@ public class RestaurantBot extends TelegramLongPollingBot {
         message.setReplyMarkup(getReviewKeyboard());
         try {
             execute(message);
-        } catch (org.telegram.telegrambots.meta.exceptions.TelegramApiException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    private void editReview(Update update, int direction) {
-        Long chatId = update.getCallbackQuery().getMessage().getChatId();
-        Integer messageId = update.getCallbackQuery().getMessage().getMessageId();
-        List<ReviewBot> reviews = userReviews.get(chatId);
-        if (reviews == null || reviews.isEmpty()) return;
-        int index = (userReviewIndexes.getOrDefault(chatId, 0) + direction + reviews.size()) % reviews.size();
-        userReviewIndexes.put(chatId, index);
-        ReviewBot review = reviews.get(index);
-        EditMessageText editMessage = new EditMessageText();
-        editMessage.setChatId(chatId.toString());
-        editMessage.setMessageId(messageId);
-        editMessage.setText(formatReviewText(review));
-        editMessage.setParseMode("Markdown");
-        editMessage.setReplyMarkup(getReviewKeyboard());
-        try {
-            execute(editMessage);
-        } catch (org.telegram.telegrambots.meta.exceptions.TelegramApiException e) {
+        } catch (TelegramApiException e) {
             e.printStackTrace();
         }
     }
@@ -245,73 +198,69 @@ public class RestaurantBot extends TelegramLongPollingBot {
     }
 
     private InlineKeyboardMarkup getReviewKeyboard() {
-        InlineKeyboardButton prev = new InlineKeyboardButton();
-        prev.setText("<<");
+        InlineKeyboardButton prev = new InlineKeyboardButton("<<");
         prev.setCallbackData("prev");
-        InlineKeyboardButton next = new InlineKeyboardButton();
-        next.setText(">>");
+        InlineKeyboardButton next = new InlineKeyboardButton(">>");
         next.setCallbackData("next");
-        List<InlineKeyboardButton> row = new ArrayList<>();
-        row.add(prev);
-        row.add(next);
+        List<InlineKeyboardButton> row = List.of(prev, next);
         InlineKeyboardMarkup markup = new InlineKeyboardMarkup();
-        markup.setKeyboard(Collections.singletonList(row));
+        markup.setKeyboard(List.of(row));
         return markup;
     }
 
     private void sendCategorySelection(Long chatId) {
         List<String> categories = menuApiClient.fetchCategories();
-        InlineKeyboardMarkup markup = new InlineKeyboardMarkup();
         List<List<InlineKeyboardButton>> rows = new ArrayList<>();
         for (String category : categories) {
-            InlineKeyboardButton btn = new InlineKeyboardButton();
-            btn.setText(category);
-            btn.setCallbackData("menu_" + category);
+            InlineKeyboardButton btn = new InlineKeyboardButton(category);
+            btn.setCallbackData("menuCategory_" + category);
             rows.add(Collections.singletonList(btn));
         }
-        markup.setKeyboard(rows);
+        InlineKeyboardMarkup markup = new InlineKeyboardMarkup(rows);
         SendMessage message = new SendMessage(chatId.toString(), "🍽 Выберите категорию меню:");
         message.setReplyMarkup(markup);
         try {
             execute(message);
-        } catch (org.telegram.telegrambots.meta.exceptions.TelegramApiException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    private void sendMenuItem(Long chatId, MenuItemDto item) {
-        String text = String.format("""
-                🍽 *%s*
-                💬 _%s_
-                💵 Цена: %.2f₽
-                """, item.getName(), item.getDescription(), item.getPrice());
-
-        SendPhoto photo = new SendPhoto();
-        photo.setChatId(chatId.toString());
-        photo.setCaption(text);
-        photo.setParseMode("Markdown");
-        photo.setReplyMarkup(getMenuKeyboard());
-
-        if (item.getImages() != null && !item.getImages().isEmpty()) {
-            photo.setPhoto(new InputFile(item.getImages().get(0)));
-        } else {
-            photo.setPhoto(new InputFile("https://via.placeholder.com/300x200.png?text=Нет+фото"));
-        }
-
-        try {
-            execute(photo);
-        } catch (org.telegram.telegrambots.meta.exceptions.TelegramApiException e) {
+        } catch (TelegramApiException e) {
             e.printStackTrace();
         }
     }
 
-    private void changeMenuItem(Update update, int direction) {
-        Long chatId = update.getCallbackQuery().getMessage().getChatId();
-        List<MenuItemDto> items = userMenuItems.get(chatId);
-        if (items == null || items.isEmpty()) return;
-        int index = (userMenuIndexes.getOrDefault(chatId, 0) + direction + items.size()) % items.size();
-        userMenuIndexes.put(chatId, index);
-        sendMenuItem(chatId, items.get(index));
+    private void sendMenuItem(Long chatId, MenuItemDto item) {
+        // Удалить предыдущее сообщение, если было
+        if (lastMenuMessageIds.containsKey(chatId)) {
+            Integer lastMessageId = lastMenuMessageIds.get(chatId);
+            try {
+                execute(new org.telegram.telegrambots.meta.api.methods.updatingmessages.DeleteMessage(chatId.toString(), lastMessageId));
+            } catch (TelegramApiException e) {
+                e.printStackTrace(); // если не удалось удалить — просто идём дальше
+            }
+        }
+
+        String text = String.format("""
+            🍽 *%s*
+            💬 _%s_
+            💵 Цена: %.2f₽
+            """, item.getName(), item.getDescription(), item.getPrice());
+
+        SendPhoto photo = new SendPhoto();
+        photo.setChatId(chatId.toString());
+        photo.setParseMode("Markdown");
+        photo.setCaption(text);
+        photo.setReplyMarkup(getMenuKeyboard());
+
+        String imageUrl = (item.getImages() != null && !item.getImages().isEmpty())
+                ? item.getImages().get(0)
+                : "https://via.placeholder.com/300x200.png?text=Нет+фото";
+
+        photo.setPhoto(new InputFile(imageUrl));
+
+        try {
+            org.telegram.telegrambots.meta.api.objects.Message sentMessage = execute(photo);
+            lastMenuMessageIds.put(chatId, sentMessage.getMessageId()); // сохраняем ID нового фото
+        } catch (TelegramApiException e) {
+            e.printStackTrace();
+        }
     }
 
     private InlineKeyboardMarkup getMenuKeyboard() {
@@ -327,5 +276,15 @@ public class RestaurantBot extends TelegramLongPollingBot {
         InlineKeyboardMarkup markup = new InlineKeyboardMarkup();
         markup.setKeyboard(Collections.singletonList(row));
         return markup;
+    }
+    private void updateMenuItem(Long chatId, int direction) {
+        List<MenuItemDto> dishes = categoryDishesCache.get(chatId);
+        if (dishes == null || dishes.isEmpty()) return;
+
+        int currentIndex = categoryDishIndexes.getOrDefault(chatId, 0);
+        int newIndex = (currentIndex + direction + dishes.size()) % dishes.size();
+        categoryDishIndexes.put(chatId, newIndex);
+
+        sendMenuItem(chatId, dishes.get(newIndex));
     }
 }
